upload action should find msi package